add scripts: start

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "node js projetc, challenge from DIO, mario kart ",
   "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "author": "JP",
   "license": "ISC",
   "private": true
